--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           </div>
       </div>      
       <div class="image">
-        <img class="desktop" src="./assets/bg raphael (2).png" alt="">
-        <img class="mobile" src="./assets/bg raphael mobile.png" alt="">
+        <img class="desktop" src="./assets/bg raphael (2).webp" alt="">
+        <img class="mobile" src="./assets/bg raphael mobile.webp" alt="">
       </div>
 
       <div class="custom-shape-divider-bottom-1749062038">
@@ -89,15 +89,15 @@
               <path d="M1200 0L0 0 598.97 114.72 1200 0z" class="shape-fill"></path>
           </svg>
       </div>
-      <img class="bg" src="./assets/bgsection.jpg" alt="">
+      <img class="bg" src="./assets/bgsection.webp" alt="">
 
       <div class="wrapper">
         <div class="content">
-          <img class="desktop" src="./assets/duvidass.png" alt="">
+          <img class="desktop" src="./assets/duvidass.webp" alt="">
 
           <header>
             <h2>Tem dúvidas se o tratamento <span>é seguro ou doloroso?</span></h2>
-            <img class="mobile" src="./assets/duvidass.png" alt="">
+            <img class="mobile" src="./assets/duvidass.webp" alt="">
             <p>O método com laser é <span>moderno, seguro e baseado em evidências científicas</span>. Mais de <span>90% dos pacientes</span> relatam melhora significativa na aparência e na dor <span>logo nas primeiras semanas</span>.</p>
             <h3>Ah, e não precisa de <span>repouso prolongado</span>: em <span>24h</span> você já pode <span>retomar a maior parte das suas atividades</span>.</h3>
             <a href="#"><button class="button">Quero tratar minhas varizes</button></a>
@@ -123,27 +123,27 @@
           <div class="swiper mySwiper3">
             <div class="cards swiper-wrapper">
               <div class="card swiper-slide">
-                <img src="./assets/depoimentos/1.png" alt="">
+                <img src="./assets/depoimentos/1.webp" alt="">
               </div>
 
               <div class="card swiper-slide">
-                <img src="./assets/depoimentos/2.png" alt="">
+                <img src="./assets/depoimentos/2.webp" alt="">
               </div>
 
               <div class="card swiper-slide">
-                <img src="./assets/depoimentos/3.png" alt="">
+                <img src="./assets/depoimentos/3.webp" alt="">
               </div>
 
               <div class="card swiper-slide">
-                <img src="./assets/depoimentos/4.png" alt="">
+                <img src="./assets/depoimentos/4.webp" alt="">
               </div>
 
               <div class="card swiper-slide">
-                <img src="./assets/depoimentos/5.png" alt="">
+                <img src="./assets/depoimentos/5.webp" alt="">
               </div>
 
               <div class="card swiper-slide">
-                <img src="./assets/depoimentos/6.png" alt="">
+                <img src="./assets/depoimentos/6.webp" alt="">
               </div>
             </div>
 
@@ -152,6 +152,121 @@
 
           <a href="#"><button class="button">Quero ter resultados assim</button></a>
         </div>
+      </div>
+    </section>
+
+    <section id="praquem">
+       <div class="custom-shape-divider-top-1749064867">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M1200 0L0 0 598.97 114.72 1200 0z" class="shape-fill"></path>
+          </svg>
+      </div>
+      <img class="bg" src="./assets/bgsection.webp" alt="">
+      
+      <div class="wrapper">
+        <div class="content">
+          <header>
+            <h2>Esse tratamento é <span>para você que</span>:</h2>
+          </header>
+
+          <div class="cards">
+            <div class="card">
+              <h3>👎</h3>
+              <p>Já tentou pomadas e meias e nada resolveu</p>
+            </div>
+
+            <div class="card">
+              <h3>👎</h3>
+              <p>Sofre com dores, inchaço ou incômodo nas pernas</p>
+            </div>
+
+            <div class="card">
+              <h3>👍</h3>
+              <p>Deseja uma solução estética e definitiva para varizes</p>
+            </div>
+
+            <div class="card">
+              <h3>👍</h3>
+              <p>Busca um método aprovado, sem cortes e com pouca recuperação</p>
+            </div>
+          </div>
+
+          <h4><span>Mas atenção:</span> as vagas para novos atendimentos são limitadas. Agendamentos somente por ordem de solicitação.</h4>
+          <a href="#"><button class="button">Agende sua consulta agora</button></a>
+        </div>
+      </div>
+
+      <div class="custom-shape-divider-bottom-1749062038">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
+          </svg>
+      </div>
+    </section>
+
+    <section id="sobre">
+      <div class="wrapper">
+        <div class="content">
+          <img src="./assets/foto raphael.webp" alt="">
+
+          <header>
+            <h2><span>Sobre o Dr.</span> Raphael Gomes Morais</h2>
+
+            <p>Médico especialista em cirurgia vascular <span>desde 2014</span>.
+            Mais de <span>10 anos de experiência</span>, centenas de pacientes atendidos de Goiânia e de todo o Brasil.
+            Atualizado com as técnicas mais <span>modernas e eficazes</span> para o <span>tratamento de varizes e doenças venosas</span>.</p>
+
+            <p class="dois">Atendimentos personalizados, com <span>atenção, ética e resultados reais</span>.</p>
+
+            <a href="#"><button class="button">Fale com o Dr. Raphael agora</button></a>
+          </header>
+        </div>
+      </div>
+    </section>
+
+    <section id="cta">
+      <div class="custom-shape-divider-top-1749064867">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M1200 0L0 0 598.97 114.72 1200 0z" class="shape-fill"></path>
+          </svg>
+      </div>
+      <img class="bg" src="./assets/bgsection.webp" alt="">
+
+      <div class="wrapper">
+        <div class="content">
+          <header>
+            <h2>Chegou a sua vez de <span>cuidar de você</span>.</h2>
+            <p>Você não precisa mais conviver com dor, incômodo ou vergonha. O primeiro passo pode ser uma simples conversa no WhatsApp.</p>
+          </header>
+
+          <div class="cards">
+            <div class="card">
+              <h3>👉 Atendimento individualizado</h3>
+            </div>
+
+            <div class="card">
+              <h3>👉 Sem promessas milagrosas — só ciência, ética e resultado</h3>
+            </div>
+
+            <div class="card">
+              <h3>👉 Procedimentos com recuperação rápida</h3>
+            </div>
+
+             <div class="card">
+              <h3>📍 Atendimentos em Goiânia, com horários flexíveis durante a semana.</h3>
+            </div>
+          </div>
+
+          <a href="#"><button class="button">Entre em contato agora</button></a>
+        </div>
+      </div>
+    </section>
+
+    <section id="author">
+      <div class="wrapper">
+          <div class="content">
+              <p>© 2025 | Todos os direitos reservados.</p>
+              <p>Dr. Raphael Gomes Morais </p>
+          </div>
       </div>
     </section>
 
