--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             <div class="text">
                  <img class="logo" src="./assets/logo Raphael.svg" alt="">
                  <h1>Livre-se das varizes com laser e <span>retome sua rotina em poucos dias</span>.</h1>
-                 <p>Tratamento <span>moderno, estético e eficaz</span> para quem quer cuidar da saúde sem abrir mão da beleza nem parar a vida.</p>
+                 <p>Tratamento <span>moderno e eficaz</span> para quem quer cuidar da saúde sem abrir mão da estética e nem parar a vida.</p>
                  <a href="#"><button class="button">Agende agora seu atendimento</button></a>
             </div>
           </div>
       </div>      
       <div class="image">
-        <img class="desktop" src="./assets/bg raphael (2).webp" alt="">
-        <img class="mobile" src="./assets/bg raphael mobile.webp" alt="">
+        <img class="desktop" src="./assets/bg raphael.webp" alt="">
+        <img class="mobile" src="./assets/bg mobile raphael.webp" alt="">
       </div>
 
       <div class="custom-shape-divider-bottom-1749062038">
@@ -77,7 +77,7 @@
 
             <div class="card">
               <h4>3.</h4>
-              <h3><span>Procedimento minimamente invasivo</span>, realizado no próprio consultório.</h3>
+              <h3><span>Procedimento minimante invasivo</span>, sendo a grande maioria realizado no próprio consultório</h3>
             </div>
 
             <div class="card">
@@ -160,6 +160,40 @@
           </div>
 
           <a href="#"><button class="button">Quero ter resultados assim</button></a>
+
+          <header class="dois">
+            <h2>Nossa <span>estrutura</span></h2>
+          </header>
+
+          <div class="swiper mySwiper3">
+            <div class="cards swiper-wrapper">
+              <div class="card swiper-slide">
+                <img src="./assets/estrutura/1.webp" alt="">
+              </div>
+
+              <div class="card swiper-slide">
+                <img src="./assets/estrutura/2.webp" alt="">
+              </div>
+
+              <div class="card swiper-slide">
+                <img src="./assets/estrutura/3.webp" alt="">
+              </div>
+
+              <div class="card swiper-slide">
+                <img src="./assets/estrutura/4.webp" alt="">
+              </div>
+
+              <div class="card swiper-slide">
+                <img src="./assets/estrutura/6.webp" alt="">
+              </div>
+
+              <div class="card swiper-slide">
+                <img src="./assets/estrutura/5.webp" alt="">
+              </div>
+            </div>
+
+            <div class="swiper-pagination"></div>
+          </div>
         </div>
       </div>
     </section>
@@ -196,7 +230,7 @@
 
             <div class="card">
               <h3>👍</h3>
-              <p>Busca um método aprovado, sem cortes e com pouca recuperação</p>
+              <p>Busca um método aprovado, sem cortes e com rápida recuperação</p>
             </div>
           </div>
 
@@ -220,11 +254,11 @@
           <header>
             <h2><span>Sobre o Dr.</span> Raphael Gomes Morais</h2>
 
-            <p>Médico especialista em cirurgia vascular <span>desde 2014</span>.
-            Mais de <span>10 anos de experiência</span>, centenas de pacientes atendidos de Goiânia e de todo o Brasil.
-            Atualizado com as técnicas mais <span>modernas e eficazes</span> para o <span>tratamento de varizes e doenças venosas</span>.</p>
+            <p>Graduado em medicina pela <span>Universidade federal de Goiás (UFG)</span></p>
+            <p>Residência médica em cirurgia vascular pelo <span>Hospital Geral de Goiânia (HGG)</span></p>
+            <p>Título de Especialista em cirurgia vascular pela <span>Sociedade Brasileira de Cirurgia Vascular (SBACV)</span></p>
 
-            <p class="dois">Atendimentos personalizados, com <span>atenção, ética e resultados reais</span>.</p>
+            <p class="dois"><span>CRM-GO 15868 - RQE 10463</span>.</p>
 
             <a href="#"><button class="button">Fale com o Dr. Raphael agora</button></a>
           </header>
@@ -232,7 +266,7 @@
       </div>
     </section>
 
-    <section id="cta">
+    <section id="estrutura">
       <div class="custom-shape-divider-top-1749064867">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
               <path d="M1200 0L0 0 598.97 114.72 1200 0z" class="shape-fill"></path>
@@ -240,6 +274,45 @@
       </div>
       <img class="bg" src="./assets/bgsection.webp" alt="">
 
+      <div class="wrapper">
+        <div class="content">
+          <header>
+            <h2><span>Tratamentos</span> realizados</h2>
+            <p>Conheça os principais procedimentos realizados no consultório — modernos, seguros e indicados de forma personalizada para cada paciente.</p>
+          </header>
+
+          <div class="cards">
+            <div class="card">
+              <img src="./assets/icon1.svg" alt="">
+              <h3>Tratamento de Varizes e Vasinhos</h3>
+              <p>Tratamentos modernos com laser e esclerotetapia. Além dos casos que necessitam de tratamento com cirurgia minimamente invasiva, sem cortes.</p>
+            </div>
+
+            <div class="card">
+              <img src="./assets/icon2.svg" alt="">
+              <h3>Ultrassonografia vascular</h3>
+              <p>Avaliação da saúde vascular com possibilidade de mapeamento de toda a sua circulação.</p>
+            </div>
+
+            <div class="card">
+              <img src="./assets/icon3.svg" alt="">
+              <h3>Cateteres para quimioterapia</h3>
+              <p>Garantir acesso vascular, sobrevida e qualidade de vida aos pacientes em tratamentos oncológicos.</p>
+            </div>
+          </div>
+
+          <a href="#"><button class="button">Entre em contato agora</button></a>
+        </div>
+      </div>
+
+      <div class="custom-shape-divider-bottom-1749062038">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
+          </svg>
+      </div>
+    </section>
+
+    <section id="cta">
       <div class="wrapper">
         <div class="content">
           <header>
