--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <header>
             <h2>Tem dúvidas se o tratamento <span>é seguro ou doloroso?</span></h2>
             <img class="mobile" src="./assets/duvidass.webp" alt="">
-            <p>O método com laser é <span>moderno, seguro e baseado em evidências científicas</span>. Mais de <span>90% dos pacientes</span> relatam melhora significativa na aparência e na dor <span>logo nas primeiras semanas</span>.</p>
+            <p>O método com laser é <span>moderno, seguro e baseado em evidências científicas</span>. <span>A grande maioria dos pacientes</span> relatam melhora significativa dos sintomas já nos primeiros dias.</p>
             <h3>Ah, e não precisa de <span>repouso prolongado</span>: em <span>24h</span> você já pode <span>retomar a maior parte das suas atividades</span>.</h3>
             <a href="#"><button class="button">Quero tratar minhas varizes</button></a>
           </header>
