--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                  <img class="logo" src="./assets/logo Raphael.svg" alt="">
                  <h1>Livre-se das varizes com laser e <span>retome sua rotina em poucos dias</span>.</h1>
                  <p>Tratamento <span>moderno e eficaz</span> para quem quer cuidar da saúde sem abrir mão da estética e nem parar a vida.</p>
-                 <a href="#"><button class="button">Agende agora seu atendimento</button></a>
+                 <a target="_blank" href="https://wa.link/jep1dl"><button class="button">Agende agora seu atendimento</button></a>
             </div>
           </div>
       </div>      
@@ -87,7 +87,7 @@
           </div>
 
           <h4>Esse é o método preferido por quem quer <span>resultado sem tempo de cama</span>.</h4>
-          <a href="#"><button class="button">Fale com o Dr. Raphael agora</button></a>
+          <a target="_blank" href="https://wa.link/jep1dl"><button class="button">Fale com o Dr. Raphael agora</button></a>
         </div>
       </div>
     </section>
@@ -109,7 +109,7 @@
             <img class="mobile" src="./assets/duvidass.webp" alt="">
             <p>O método com laser é <span>moderno, seguro e baseado em evidências científicas</span>. <span>A grande maioria dos pacientes</span> relatam melhora significativa dos sintomas já nos primeiros dias.</p>
             <h3>Ah, e não precisa de <span>repouso prolongado</span>: em <span>24h</span> você já pode <span>retomar a maior parte das suas atividades</span>.</h3>
-            <a href="#"><button class="button">Quero tratar minhas varizes</button></a>
+            <a target="_blank" href="https://wa.link/jep1dl"><button class="button">Quero tratar minhas varizes</button></a>
           </header>
         </div>
       </div>
@@ -159,7 +159,7 @@
             <div class="swiper-pagination"></div>
           </div>
 
-          <a href="#"><button class="button">Quero ter resultados assim</button></a>
+          <a target="_blank" href="https://wa.link/jep1dl"><button class="button">Quero ter resultados assim</button></a>
 
           <header class="dois">
             <h2>Nossa <span>estrutura</span></h2>
@@ -235,7 +235,7 @@
           </div>
 
           <h4><span>Mas atenção:</span> as vagas para novos atendimentos são limitadas. Agendamentos somente por ordem de solicitação.</h4>
-          <a href="#"><button class="button">Agende sua consulta agora</button></a>
+          <a target="_blank" href="https://wa.link/jep1dl"><button class="button">Agende sua consulta agora</button></a>
         </div>
       </div>
 
@@ -260,7 +260,7 @@
 
             <p class="dois"><span>CRM-GO 15868 - RQE 10463</span>.</p>
 
-            <a href="#"><button class="button">Fale com o Dr. Raphael agora</button></a>
+            <a target="_blank" href="https://wa.link/jep1dl"><button class="button">Fale com o Dr. Raphael agora</button></a>
           </header>
         </div>
       </div>
@@ -301,7 +301,7 @@
             </div>
           </div>
 
-          <a href="#"><button class="button">Entre em contato agora</button></a>
+          <a target="_blank" href="https://wa.link/jep1dl"><button class="button">Entre em contato agora</button></a>
         </div>
       </div>
 
@@ -338,7 +338,7 @@
             </div>
           </div>
 
-          <a href="#"><button class="button">Entre em contato agora</button></a>
+          <a target="_blank" href="https://wa.link/jep1dl"><button class="button">Entre em contato agora</button></a>
         </div>
       </div>
     </section>
