--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="card">
               <img src="./assets/icon1.svg" alt="">
               <h3>Tratamento de Varizes e Vasinhos</h3>
-              <p>Tratamentos modernos com laser e esclerotetapia. Além dos casos que necessitam de tratamento com cirurgia minimamente invasiva, sem cortes.</p>
+              <p>Tratamentos modernos com laser e escleroterapia. Além dos casos que necessitam de tratamento com cirurgia minimamente invasiva, sem cortes.</p>
             </div>
 
             <div class="card">
